[FIX] add overlay container z-index 17

--- a/public/stylesheets/chartJs.css
+++ b/public/stylesheets/chartJs.css
@@ -454,6 +454,7 @@
   width:100%;
   height:60%;
   position:fixed;
+  z-index: 17;
   bottom:0%;
   transform: translateY(100%);
   background-color: #c9d5a1;
